ubuntu-release-upgrader (1:0.181) UNRELEASED; urgency=low

  * DistUpgrade/DistUpgradeController.py: Guard against UnboundLocalError in
    doDistUpgradeFetching.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 27 Sep 2012 10:11:48 +0100

ubuntu-release-upgrader (1:0.180) quantal; urgency=low

  * drop "unity-2d" from removal blacklist

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 04 Sep 2012 10:01:45 +0200

ubuntu-release-upgrader (1:0.179) quantal; urgency=low

  * include the gtkbuilder/ dir again in the tarball to fix
    GUI upgrades (LP: #1043696)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 30 Aug 2012 10:53:55 +0200

ubuntu-release-upgrader (1:0.178) quantal; urgency=low

  [ Michael Vogt ]
  * add unity_support_test as a upgrader quirk (LP: #1035261)

  [ Jonathan Riddell ]
  * Remove kdm and xsettings-kde

 -- Jonathan Riddell <jriddell@ubuntu.com>  Fri, 10 Aug 2012 16:54:36 +0200

ubuntu-release-upgrader (1:0.177) quantal; urgency=low

  * Apparently the buildds also have LC_ALL set to C, so the previous upload
    wasn't enough to workaround the problem. This time override both LANG
    and LC_ALL.

 -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 08 Aug 2012 19:20:59 -0400

ubuntu-release-upgrader (1:0.176) quantal; urgency=low

  * Use LANG=C.UTF-8 to prevent a python crash when running setup.py with
    an uploader name containing utf-8 on buildds using LANG=C.

 -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 08 Aug 2012 18:55:01 -0400

ubuntu-release-upgrader (1:0.175) quantal; urgency=low

  * Fix removal_blacklist to blacklist "^screen$" instead of "screen".
    This fixes cases where the upgrade would fail because of a package
    containing "screen" being removed. (LP: #1029531)

 -- Stéphane Graber <stgraber@ubuntu.com>  Wed, 08 Aug 2012 17:57:36 -0400

ubuntu-release-upgrader (1:0.174) quantal-proposed; urgency=low

  * DistUpgrade/DistUpgradeApport.py: use a whitelist to ensure that only