@@ -1,9 +1,14 @@
 ubuntu-release-upgrader (1:0.181) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * DistUpgrade/DistUpgradeController.py: Guard against UnboundLocalError in
     doDistUpgradeFetching.
 
- -- Colin Watson <cjwatson@ubuntu.com>  Thu, 27 Sep 2012 10:11:48 +0100
+  [ Brian Murray ]
+  * ensure that apt-clone system state is included in bug reports filed by
+    apport
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 27 Sep 2012 09:04:36 -0700
 
 ubuntu-release-upgrader (1:0.180) quantal; urgency=low
 
